# mltool

./: CMakeLists.txt  LICENSE.txt  README.md
doc/: perceptron.docx
src/: CMakeLists.txt
src/core/: CMakeLists.txt  mltool.h
src/core/perceptron/: CMakeLists.txt  initialization.h  learning_policies.h  perceptron.cpp  perceptron.h
src/io/: CMakeLists.txt  classifier_dataloader .h  classifier_dataloader.cpp  classifier_dataloader.h  dataloader.h  defines.h
src/math/: CMakeLists.txt  defines.h  mat.cpp  mat.h  matrix.h  matrix1.h  test_matrix.cpp  vector.h
